slider logos ok, contact page WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,15 +24,21 @@
   </div>
 </div>
 <div id="social" class="boxSideBars">
-  <div id="linkedin" class="boxSideBars">
-    <fa-icon [icon]="faLinkedinIn" class="socialIcons"></fa-icon>
-  </div>
-  <div id="youtube" class="boxSideBars">
-    <fa-icon [icon]="faYoutube" class="socialIcons"></fa-icon>
-  </div>
-  <div id="github" class="boxSideBars">
-    <fa-icon [icon]="faGitHub" class="socialIcons"></fa-icon>
-  </div>
+  <a href="https://www.linkedin.com/in/alejandro-alonzo-69639a38/" target="_blank" rel="noopener noreferrer">
+    <div id="linkedin" class="boxSideBars">
+      <fa-icon [icon]="faLinkedinIn" class="socialIcons"></fa-icon>
+    </div>
+  </a>
+  <a href="https://www.youtube.com/channel/UCFt69MxS_7dK54ii5yQoNEA" target="_blank" rel="noopener noreferrer">
+    <div id="youtube" class="boxSideBars">
+      <fa-icon [icon]="faYoutube" class="socialIcons"></fa-icon>
+    </div>
+  </a>
+  <a href="https://github.com/alejoalonzo" target="_blank" rel="noopener noreferrer">
+    <div id="github" class="boxSideBars">
+      <fa-icon [icon]="faGitHub" class="socialIcons"></fa-icon>
+    </div>
+  </a>
 </div>
 
 <!-- navbar------------------------------------------------------------------------ -->
