--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,24 +14,230 @@
                 My concept is never stop to learn that's why I've got a personal interest for continuous learning and
                 self
                 improvement.
-                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
-                self
-                improvement.
-                My concept is never stop to learn that's why I've got a personal interest for continuous learning and
-                self
-                improvement.
+                I love to play the guitar in my free time, and I also really like to travel around the world and connect
+                with many people.
             </span>
         </div>
-    </div>
-</section>
-
-<!-- projects------------------------------------------------------------------------ -->
-<section id="project">
-    <div id="containerProjects">
-        <h3 id="titles">
-            Latest projects
-        </h3>
 
     </div>
-
 </section>
+<!-- SkillSet------------------------------------------------------------------------ -->
+<div class="skillSetContainer">
+    <div class="containerTitle">
+        <h2>
+            Skill Set
+        </h2>
+    </div>
+</div>
+<div class="slider">
+    <div class="sliderTrack">
+        <!-- slides -->
+        <div class="slide">
+            <img src="../assets/media/java.png" alt="logo java">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/javascript.png" alt="logo javascript">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/css.png" alt="logo css">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/html.png" alt="logo html">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Bootstrap.png" alt="logo bootstrap">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/git.png" alt="logo git">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/sass.png" alt="logo sass">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/wordpress.png" alt="logo wordpress">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/php.png" alt="logo php">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/mysql.png" alt="logo mysql">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/jquery.png" alt="logo jquery">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Angular.png" alt="logo angular">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/logoPS.png" alt="logo adobe PS">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/adobeXDlogo.png" alt="logo adobe XD">
+        </div>
+
+        <!-- slides duplicated -->
+        <div class="slide">
+            <img src="../assets/media/java.png" alt="logo java">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/javascript.png" alt="logo javascript">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/css.png" alt="logo css">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/html.png" alt="logo html">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Bootstrap.png" alt="logo bootstrap">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/git.png" alt="logo git">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/sass.png" alt="logo sass">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/wordpress.png" alt="logo wordpress">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/php.png" alt="logo php">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/mysql.png" alt="logo mysql">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/jquery.png" alt="logo jquery">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Angular.png" alt="logo angular">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/logoPS.png" alt="logo adobe PS">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/adobeXDlogo.png" alt="logo adobe XD">
+        </div>
+
+        <!-- slides duplicated -->
+        <div class="slide">
+            <img src="../assets/media/java.png" alt="logo java">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/javascript.png" alt="logo javascript">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/css.png" alt="logo css">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/html.png" alt="logo html">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Bootstrap.png" alt="logo bootstrap">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/git.png" alt="logo git">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/sass.png" alt="logo sass">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/wordpress.png" alt="logo wordpress">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/php.png" alt="logo php">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/mysql.png" alt="logo mysql">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/jquery.png" alt="logo jquery">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Angular.png" alt="logo angular">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/logoPS.png" alt="logo adobe PS">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/adobeXDlogo.png" alt="logo adobe XD">
+        </div>
+
+        <!-- slides duplicated -->
+        <div class="slide">
+            <img src="../assets/media/java.png" alt="logo java">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/javascript.png" alt="logo javascript">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/css.png" alt="logo css">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/html.png" alt="logo html">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Bootstrap.png" alt="logo bootstrap">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/git.png" alt="logo git">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/sass.png" alt="logo sass">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/wordpress.png" alt="logo wordpress">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/php.png" alt="logo php">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/mysql.png" alt="logo mysql">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/jquery.png" alt="logo jquery">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/Angular.png" alt="logo angular">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/logoPS.png" alt="logo adobe PS">
+        </div>
+        <div class="slide">
+            <img src="../assets/media/adobeXDlogo.png" alt="logo adobe XD">
+        </div>
+
+    </div>
+</div>
+
+<div id="createProject">
+    <div id="imgCreateProject">
+        <div id="tilleImgCreateProject">
+            <h1>Tech <br>Skill</h1>
+        </div>
+    </div>
+    <div class="containerForm">
+        <h3 class="titles">My background</h3>
+        <span class="descriptionAbout  paddingRight200">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro velit nemo quia nulla deserunt similique
+            eligendi hic. Qui, et nisi obcaecati numquam, modi consequuntur eos doloribus, minus beatae ipsam facilis!
+        </span>
+        <span class="descriptionAbout marginTop50">CFGS Web Applications Development</span>
+        <span class="descriptionAbout">IFP (Barcelona, Spain. 2020-2022)</span>
+        <span class="descriptionAbout marginTop50">Bachelor's Degree in Graphic Design</span>
+        <span class="descriptionAbout">UES (El Salvador, 2006-2013)</span>
+    </div>
+</div>
+
+<!-- footer------------------------------------------------------------------------ -->
+<footer>
+    <div class="footerTextContainer">
+        <div class="footerText">
+            Let's talk
+            Wanna get in touch or talk about a project?</div>
+        <div class="footerText">
+            Feel free to drop a line in the form at the
+            contact page.
+        </div>
+    </div>
+</footer>
