--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,32 @@
-<p>contact works!</p>
+<div id="createProject">
+    <div id="imgContactProject">
+    </div>
+
+    <div class="containerForm">
+        <h2>{{title}}</h2>
+
+        <form>
+            <span>
+                <!-- <label for="name">Name</label> -->
+                <input type="text" name="name" placeholder="Name" required>
+            </span>
+            <span>
+                <!-- <label for="category">Category</label> -->
+                <input type="email" name="email" placeholder="Email" required>
+            </span>
+            <span>
+                <!-- <label for="langs">Languages</label> -->
+                <input type="text" name="subject" placeholder="Subject" required>
+            </span>
+            <span>
+                <!-- <label for="description">Description</label> -->
+                <textarea name="message" placeholder="Message" required></textarea>
+            </span>
+            <div class="OpenAndSubmit">
+                <span class="submitForm">
+                    <input type="submit" name="" id="" value="Submit" placeholder="Submit">
+                </span>
+            </div>
+        </form>
+    </div>
+</div>
