--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="portfolioPage">
     <div class="containerTitle">
-        <h2>
+        <h2 id="projectsTitle">
             My Projects
         </h2>
         <span>
@@ -12,7 +12,7 @@
 </div>
 <div class="portfolioPage">
     <div class="projectsContainer">
-        <ul>
+        <ul class="bgDark">
             <li class="projectView " *ngFor="let projects of pro">
                 <div class="cardsProjects">
                     <img class="dark-img" src="{{url+'/getImage/'+projects.image}}" alt="Project image">
