--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
     </div>
 
     <div class="containerForm">
-        <h2>{{title}}</h2>
+        <h2 data-aos="fade-left" data-aos-duration="3000">{{title}}</h2>
 
         <form>
             <span>
@@ -24,7 +24,9 @@
             </span>
             <div class="OpenAndSubmit">
                 <span class="submitForm">
+
                     <input type="submit" name="" id="" value="Submit" placeholder="Submit">
+                    <fa-icon [icon]="faArrowRight" id="iconFolder"></fa-icon>
                 </span>
             </div>
         </form>
