--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,11 +2,12 @@
 <section class="aboutMe">
     <div class="aboutMeContainer">
         <div id="imgAbout">
-            <img id="imgAbout1" src="../assets/media/about.jpg" alt="About">
-            <img id="imgAbout2" src="../assets/media/74553037.jpeg" alt="About">
+            <img data-aos="fade-up" data-aos-duration="1500" id="imgAbout1" src="../assets/media/about.jpg" alt="About">
+            <img data-aos="fade-down" data-aos-duration="1500" id="imgAbout2" src="../assets/media/74553037.jpeg"
+                alt="About">
 
         </div>
-        <div class="textAbout">
+        <div class="textAbout" data-aos="fade-left" data-aos-duration="3000">
             <h3 class="titles">
                 Who's this guy
             </h3>
@@ -217,15 +218,18 @@
         </div>
     </div>
     <div class="containerForm">
-        <h3 class="titles">My background</h3>
-        <span class="descriptionAbout  paddingRight200">
+        <h3 class="titles" data-aos="fade-left" data-aos-duration="2000">My background</h3>
+        <span class="descriptionAbout  paddingRight200" data-aos="fade-left" data-aos-duration="3000">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro velit nemo quia nulla deserunt similique
             eligendi hic. Qui, et nisi obcaecati numquam, modi consequuntur eos doloribus, minus beatae ipsam facilis!
         </span>
-        <span class="descriptionAbout marginTop50">CFGS Web Applications Development</span>
-        <span class="descriptionAbout">IFP (Barcelona, Spain. 2020-2022)</span>
-        <span class="descriptionAbout marginTop50">Bachelor's Degree in Graphic Design</span>
-        <span class="descriptionAbout">UES (El Salvador, 2006-2013)</span>
+        <span class="descriptionAbout marginTop50" data-aos="fade-left" data-aos-duration="3000">CFGS Web Applications
+            Development</span>
+        <span class="descriptionAbout" data-aos="fade-left" data-aos-duration="3000">IFP (Barcelona, Spain.
+            2020-2022)</span>
+        <span class="descriptionAbout marginTop50" data-aos="fade-left" data-aos-duration="3000">Bachelor's Degree in
+            Graphic Design</span>
+        <span class="descriptionAbout" data-aos="fade-left" data-aos-duration="3000">UES (El Salvador, 2006-2013)</span>
     </div>
 </div>
 
