--- a/src/styles.scss
+++ b/src/styles.scss
@@ -526,6 +526,138 @@ form input[disabled] {
   justify-content: center;
   align-items: center;
 }
+#faMapMarkerAlt{
+  color: $backgroundColorDarkPrimary;
+  font-size: 3rem;
+  position: absolute;
+  top: calc(155% - 45px);
+  left: calc(30% - 17px);
+  z-index: 3;
+  cursor: pointer;
+}
+/*effect radar*/
+@keyframes radar{
+  0%{
+      width:75px;
+      height:75px;
+      border:40px 
+      solid #fff;
+      opacity:0
+  }50%{
+      opacity:.3
+  }
+  90%{
+      width:250px;
+      height:250px
+  }
+  100%{
+      border:2px 
+      solid #fff;
+      opacity:0.2
+  }100%{
+      width:350px;
+      height:350px
+  }
+}
+
+.radar {
+  position: absolute;
+  top: 155%;
+  left: 30%;
+  border-radius: 50%;
+  border: 10px solid #fff;
+  width: 150px;
+  height: 150px;
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  -webkit-animation: radar 2s infinite;
+  animation: radar 2s infinite;
+  opacity: 0;
+}
+.radar:nth-child(2) {
+  animation-delay: .4s;
+}
+.radar:nth-child(3) {
+  animation-delay: .9s;
+}
+.radar:nth-child(4) {
+  animation-delay: .15s;
+}
+
+/*-------------toolTip--------------*/
+.tooltip{
+  display: flex;
+  background: $backgroundColorGlobalSecundary;
+  border-radius: 10px;
+  box-shadow: 5px 5px 50px rgba(0, 0, 0, .30);
+  width: 31.25em;
+  z-index: 10;
+  opacity: 0;
+  transition: 400ms ease all;
+  transform: translateY(10px);
+  position: absolute;
+  top: calc(155% - 321px);
+  left: calc(30% - 349px);
+}
+
+.tooltip::after{
+  content: "";
+  display: inline-block;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 15px solid $backgroundColorGlobalSecundary;
+  position: absolute;
+  bottom: -15px;
+  left: calc(70% - 15px);
+}
+.tooltip.active{
+  opacity: 1;
+  transform: translateY(0);
+}
+.tooltip .thumb{
+  width: 40%;
+}
+.tooltip .thumb img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 0 0 10px;
+  vertical-align: top;
+}
+
+.tooltip .info{
+  width: 60%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.tooltip .info .title{
+ color: $customBlue;
+ font-weight: 600;
+ font-size: 1.5rem;
+ margin-bottom: 10px;
+}
+.tooltip .info .resumen{
+  color: $TextColorGlobalSecundary;
+  font-size: 0.9rem;
+  margin-bottom: 20px;
+ }
+ .tooltip .info .adress{
+  color: $backgroundColorDarkPrimary;
+  margin-bottom: 20px;
+ }
+ 
+ .tooltip .info button{
+    border: none;
+    background: $customBlue;
+    // font-weight: bold;
+    padding: 10px 20px;
+    width: 100%;
+    border-radius: 0 0 10px 0;
+    color: $backgroundColorGlobalPrimary;
+    cursor: pointer;
+ }
 
 /******************************************PORTFOLIO***************************************/
 
@@ -681,7 +813,7 @@ form input[disabled] {
 
 /******************************MEDIA QUERIES****************************************/
 
-/*laptop*/
+/*LAPTOP*/
 
 /*--------------------------------------header--------*/
 @media (max-width: 1550px){
@@ -718,6 +850,14 @@ form input[disabled] {
   }
   nav ul #homeBtnMenu {
     margin-right: 55%;
+  }
+
+  
+  #imgCreateProject, #imgContactProject{
+    background-size: cover;
+  }
+  #createProject{
+    height: 680px;
   }
 
 }
