Projects Page ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,11 +57,11 @@
 <!-- navbar------------------------------------------------------------------------ -->
 <nav #navbar>
   <ul>
-    <li id="homeBtnMenu"><a [routerLink]="['']" [routerLinkActive]="['actived']">Alejo</a></li>
-    <li><a [routerLink]="['/about-me']" [routerLinkActive]="['actived']">About</a></li>
-    <li><a [routerLink]="['/projects']" [routerLinkActive]="['actived']">Projects</a></li>
-    <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">Create</a></li>
-    <li><a [routerLink]="['/contact']" [routerLinkActive]="['actived']">Contact</a></li>
+    <li id="homeBtnMenu"><a [routerLink]="['']" [routerLinkActive]="['actived']">ALE</a></li>
+    <li><a [routerLink]="['/about-me']" [routerLinkActive]="['actived']">ABOUT</a></li>
+    <li><a [routerLink]="['/projects']" [routerLinkActive]="['actived']">PROJECTS</a></li>
+    <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">CREATE</a></li>
+    <li><a [routerLink]="['/contact']" [routerLinkActive]="['actived']">CONTACT</a></li>
   </ul>
 </nav>
 
