--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,7 +1,6 @@
 <div class="aboutMe" *ngIf="project">
     <div class="aboutMeContainer">
         <img class="imgeLeftMedium" src="{{url+'/getImage/'+project.image}}" alt="Project image" *ngIf="project.image">
-
         <div class="textAbout">
             <h3 class="titles">
                 {{project.name}}
@@ -26,8 +25,9 @@
                         Watch a preview
                     </button>
                 </a>
+
             </div>
-            <div class="bottonsProjecrtsDetail" *ngIf="confirm == false">
+            <div class="bottonsProjecrtsDetail displayNone" *ngIf="confirm == false">
                 <a [routerLink]="['/edit', project._id]"><button>
                         Set project
                     </button></a>
@@ -43,6 +43,11 @@
                     Permanently delete
                 </button>
             </div>
+            <a [routerLink]="['/projects']">
+                <button class="bottonsGoBack">
+                    <fa-icon [icon]="faArrowLeft"></fa-icon>&nbsp; &nbsp;Go back to all projects
+                </button>
+            </a>
         </div>
     </div>
 </div>
