--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,37 +1,42 @@
 <div class="portfolioPage">
     <div class="containerTitle">
-        <h2 id="projectsTitle" data-aos="fade-down" data-aos-duration="3000">
+        <h2 id="projectsTitle" data-aos="fade-down" data-aos-duration="2000">
             My Projects
         </h2>
         <span>
             A small gallery of recent projects chosen by me. I've done them all together with amazing people from
             companies around the globe. It's only a drop in the ocean compared to the entire list.
-
         </span>
     </div>
 </div>
 <div class="portfolioPage">
     <div class="projectsContainer">
         <ul class="bgDark">
-            <li class="projectView " *ngFor="let projects of pro">
+            <li class="projectView" *ngFor="let projects of pro">
                 <div class="cardsProjects">
-                    <img class="dark-img imgPotfolioPage" src="{{url+'/getImage/'+projects.image}}" alt="Project image">
-                    <div>
-                        <h3 (mouseover)="changeClass=true" (mouseout)="changeClass=false" class="hTresPortfolio">
+                    <img src="{{url+'/getImage/'+projects.image}}" alt="Project image" class="imgPotfolioPage dark-img"
+                        [class.backgroundDarkImgPorfolio]="changeClass">
+                    <div class="infoProjectPorfolioCard">
+                        <h3 class="hTresPortfolio">
                             {{projects.name}}
                         </h3>
-                        <span (mouseover)="changeClass=true" (mouseout)="changeClass=false"
-                            class="spanPorfolio">{{projects.langs}}
-                        </span>
-                        <span (mouseover)="changeClass=true" (mouseout)="changeClass=false" class="spanPorfolio2">
-                            <a class="seeProjectLink" [routerLink]="['/project', projects._id]">See Project</a>
+                        <span class="spanPorfolio">{{projects.langs}}
                         </span>
                     </div>
+                    <div class="squreTextPorfolio" (mouseover)="changeClass=true" (mouseout)="changeClass=false">
+                    </div>
+                    <span class="spanPorfolio2" (mouseover)="changeClass=true" (mouseout)="changeClass=false">
+                        <a class="seeProjectLink" [routerLink]="['/project', projects._id]">See Project</a>
+                    </span>
                 </div>
             </li>
         </ul>
     </div>
 </div>
+<!-- (mouseover)="changeClass=true" (mouseout)="changeClass=false" -->
+<!-- [class.dark-img]="changeClass" -->
+
+
 <!-- footer------------------------------------------------------------------------ -->
 <footer>
     <div class="footerTextContainer">
